feat: improve verify_route.py to get role from user
